# acc-ai

./: .gitignore  pyproject.toml  test_naver_image.py
app/: main.py
app/api/: routes_banner.py  routes_banner_khs.py  routes_cardnews_generate.py  routes_cardnews_images.py  routes_cardnews_prompt.py  routes_editor_render.py  routes_editor_template.py  routes_festival.py  routes_images.py  routes_liveposter.py  routes_mascot.py  routes_operate.py  routes_poster copy.py  routes_poster.py  routes_poster_khs.py  routes_proposal.py  routes_region_trend.py  routes_report.py  routes_total_trend.py
app/api/banner/: routes_road_banner.py  routes_streetlamp_banner.py
app/api/bus/: routes_general_bus_driveway.py
app/data/: acc_fonts.txt  fonts_mapping.txt  seed_festivals_with_banners.py  youtube_long_result.txt  youtube_short_result.txt
app/dh/: main.py
app/dh/api/: routes_festival.py  routes_images.py
app/dh/domain/: festival_plan.py
app/dh/service/: festival_plan_service.py
app/dh/tools/: image_loader.py
app/domain/banner/: banner_model.py
app/domain/cardnews/: cardnews_model.py  cardnews_prompt_model.py  cardnews_score_model.py
app/domain/festival/: festival_plan.py
app/domain/liveposter/: liveposter_model.py
app/domain/mascot/: mascot_model.py
app/domain/poster/: poster_model.py
app/domain/report/: report_model.py
app/hs/: Copy.py  analyze_with_pdf_tools.py  horizontal_3024_544_make_banner_from_prompt.py  horizontal_3024_544_make_prompt_from_analysis.py  make_banner_prompt_from_pdf.py  mascot_make_mascot_from_prompt.py  poster_scores_korean_progress.csv  test.ipynb  test.txt  vertical_1008_3024_make_banner_from_prompt.py  실행코드 복사.txt
app/poster_service/: app.py  generate_poster_with_text.py  image_generator.py  main.py  pdf_tools.py  poster_generator.py
app/service/: run_all_ads_batch.py
app/service/banner/: check_prompt_change.py  horizontal_3024_544_make_banner_from_prompt.py  horizontal_3024_544_make_prompt_from_analysis.py  vertical_1008_3024_make_prompt_from_analysis.py
app/service/banner_khs/: banner_horizontal_builder.py  make_road_banner copy.py  make_road_banner.py  make_streetlamp_banner.py
app/service/batch/: cardnews_batch_service.py
app/service/bus/: make_all_bus_drivewayT.py  make_bus_road.py  make_bus_shelter.py  make_daewoo_bus_sidewalkT.py  make_general_bus_driveway.py  make_general_bus_getoff.py  make_general_bus_sidewalkT.py  make_hyundai_bus_sidewalkT.py  make_medium_bus_driveway.py  make_medium_bus_getoff.py  make_medium_bus_sidewalkT.py
app/service/cardnews/: cardnews_prompt_service.py  cardnews_score_service.py  dfdfdf.py  make_leaflet_image.py  make_leaflet_image22.py  make_poster_cardnews.py  replicate_image_generator.py  replicate_prompt_optimizer.py  text_overlay_service.py
app/service/editor/: ai_styler.py  make_before_edtior.py  mkake_after_editor.py  test.ipynb  test_render.py  testt.ipynb
app/service/festival/: festival_plan_service.py
app/service/font_color/: banner_color_recommend.py  banner_font_color_recommend.py  bus_font_color_recommend.py  image_text_color_recommend.py  subway_platform_font_color_recommend.py
app/service/goods/: make_goods_emoticon.py  make_goods_key_ring.py  make_goods_sticker.py
app/service/leaflet/: make_leaflet_image.py
app/service/liveposter/: image_video_generator copy.py  image_video_generator.py
app/service/logo/: make_logo_illustration.py  (+1 more)
app/test/: run_banner_prompt_update.py  test_banner_ko_sync.py  test_banner_prompt_full_io.py
app/tools/: pdf_tools.py
tools/: rename_spaces_to_underscores.py
(+63 files in other folders)
